Refactor and enhance unit tests for various commands in the Google Webmaster CLI
- Improved test structure and readability by organizing import statements and adding JavaDoc comments.
- Updated test methods to follow consistent naming conventions and added exception handling where necessary.
- Added new tests for the AddCommand and refactored existing tests in the ListCommand, SubmitCommand, and other related classes.
- Ensured that all tests validate expected behavior, including successful execution and handling of exceptions.
- Removed redundant code and improved the clarity of test assertions.